# recodexClient

./: .conf  .gitignore  README.md  api.py  apiPackageTest.py  client.py  generate.sh  initVenv.sh  installGenerated.sh  installPackage.sh  pyproject.toml  replaceGenerated.sh  requirements.txt  uploadPackage.sh
.github/workflows/: python-tests.yaml
commands/: initRepo.sh  replaceGenerated.sh  runTestsLocally.sh  uploadPackage.sh
src/: readmeChangesCleaner.py  swaggerDiffchecker.py
src/recodex-cli-lib/: client.py
src/recodex_cli_lib/: alias_container.py  aliases.yaml  client.py  clientFactory.py  client_factory.py  client_response.py  endpoint_resolver.py  file_upload_helper.py  swagger_validator.py  utils.py
src/recodex_cli_lib/client_components/: alias_container.py  client_response.py  endpoint_resolver.py  swagger_validator.py
src/recodex_cli_lib/helpers/: file_upload_helper.py  user_context.py  utils.py
tests/: initRepo.sh  mock_server.py  req.py  test_login.py  tester.py
tests/mockEndpoints/: file_mocks.py  group_mocks.py  login_mocks.py  registration_mocks.py
tests/testClasses/: __main__.py  request_tests.py  test_class_base.py  validation_tests.py
tests/utils/: constants.py  success_wrapper.py
