[build-system]
requires = [
  "setuptools>=61.0",
  "certifi>=14.05.14",
  "six>=1.10",
  "python_dateutil>=2.5.3",
  "urllib3>=1.15.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "recodex_cli_lib_eceltov"
version = "0.0.3"
authors = [
  { name="Vojtech Kloda", email="vojtech.kloda@gmail.com" },
]
description = "A library for ReCodEx API calls."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/ReCodEx"
Issues = "https://github.com/ReCodEx"
